Thu Oct 10 17:26:12 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tcltklib/stubs.c (ruby_tcltk_stubs): fix memory leak.
	  [ruby-dev:18478]

Thu Oct 10 15:20:18 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (ruby_init): Init_stack() with local location.
	  (ruby-bugs-ja:PR#277)

	* gc.c (Init_stack): prefer address of argument rather than local
	  variable to initialize rb_gc_stack_start.

	* lib/weakref.rb (WeakRef::@@final): use Hash#delete.

	* lib/weakref.rb (WeakRef::__getobj__): examin if alive or not by
	  ID_REV_MAP to deal with recycled object.  [ruby-dev:18472]

	* lib/weakref.rb (WeakRef::weakref_alive?): ditto.

Mon Oct  7 16:43:07 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigdivrem): bignum zero's len should not be 0.

Mon Oct  7 15:36:42 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigdivmod): wrong condition check for Bignum zero.

	* bignum.c (Init_Bignum): need to add Bignum#div.

Sun Oct  6 06:11:19 2002  Minero Aoki  <aamine@loveruby.net>

	* eval.c (rb_load): should not pass block to the loaded file.

Fri Oct  4 14:23:08 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (RUBY_PROG_GNU_LD): check whether the linker is GNU ld.

	* ext/extmk.rb.in (create_makefile): add -Wl,-no-undefined to $DLDFLAGS
	  on Linux if GNU ld is used and --enable-shared is specified.

	* configure.in (RUBY_MINGW32): backport from 1.7.

Fri Oct  4 02:21:16 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_rshift): num should be initialized by carry
	  bits if x is negative. (ruby-bugs-ja:PR#347)

	* bignum.c (bigdivmod): len for bignum zero is 1, not 0.

Thu Oct  3 20:09:52 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ext/tcltklib/tcltklib.c (invoke_queue_handler): make singleton
	  method object to run handler in separated safe level.

	* ext/tcltklib/tcltklib.c (ip_invoke): requires command name
	  argument.
